--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -1,105 +1,137 @@
-<!doctype html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-br" dir="ltr">
   <head>
-  	<title>Ótica New Look</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/principal.css">
-  </head>
-  <body>
-		
-		<div class="wrapper d-flex align-items-stretch">
-			<nav id="sidebar">
-				<div class="p-4 pt-5">
-		  		<a href="#" class="img logo rounded-circle mb-5" style="background-image: url(images/Logo02.png);"></a>
-	        <ul class="list-unstyled components mb-5">
-	          <li class="active">
-	            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">CADASTROS</a>
-	            <ul class="collapse list-unstyled" id="homeSubmenu">
-                <li>
-                    <a href="cadastros/Funcionario.html">Funcionário</a>
-                </li>
-                <li>
-                    <a href="cadastros/Cliente.html">Cliente</a>
-                </li>
-                <li>
-                    <a href="cadastros/OrdemdeServico.html">Ordem de Serviço</a>
-                </li>
-                <li>
-                  <a href="cadastros/Fornecedor.html">Fornecedor</a>
-              </li>
-              <li>
-                <a href="cadastros/Produtos.html">Produtos</a>
-            </li>
-	            </ul>
-	          </li>
-	          <li>
-              <a href="#pageConsultas" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">CONSULTAS</a>
-              <ul class="collapse list-unstyled" id="pageConsultas">
-                <li>
-                    <a href="consulta/ConsProdutos.html">Produtos</a>
-                </li>
-                <li>
-                    <a href="consulta/ConsClientes.html">Clientes</a>
-                </li>
-                <li>
-                    <a href="consulta/ConsOrdemdeServico.html">Ordem de Serviço</a>
-                </li>
-              </ul>
-	          </li>
-	          <li>
-              <a href="#">VENDAS DE PRODUTOS</a>
-	          </li>
-	          <li>
-              <a href="#">COMPRAS DE PRODUTOS</a>
-	          </li>
-            <li>
-              <a href="#pageRelatorios" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">RELATÓRIOS</a>
-              <ul class="collapse list-unstyled" id="pageRelatorios">
-                <li>
-                    <a href="#">Vendas</a>
-                </li>
-                <li>
-                    <a href="#">Fluxo de Caixa</a>
-                </li>
-	        </ul>
-	        
-	      </div>
-    	</nav>
-
-      <div id="content" class="p-4 p-md-5">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-
-            <button type="button" id="sidebarCollapse" class="btn btn-primary">
-              <i class="fa fa-bars"></i>
-              <span class="sr-only">Toggle Menu</span>
-            </button>
-            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fa fa-bars"></i>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Usuário:</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Saldo Caixa:</a>
-                </li>
-              
-              </ul>
-            </div>
-          </div>
-        </nav>
+    <meta charset="UTF-8">
+    <title>Ótica New Look</title>
+    <link rel="stylesheet" href="css/principal.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+<body>
+  <div class="sidebar close">
+    <div class="logo-details">
+      <i class='bx bxl-c-plus-plus'></i>
+      <span class="logo_name">Ótica New Look</span>
     </div>
-		</div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/principal.js"></script>
-  </body>
+    <ul class="nav-links">
+      <li>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">Cadastro</a></li>
+        </ul>
+      </li>
+      <li>
+        <div class="iocn-link">
+          <a href="#">
+            <i class='bx bx-collection' ></i>
+            <span class="link_name">Cadastro</span>
+          </a>
+          <i class='bx bxs-chevron-down arrow' ></i>
+        </div>
+        <ul class="sub-menu">
+          <li><a class="link_name" href="#">Cadastro</a></li>
+          <li><a href="#">Funcionário</a></li>
+          <li><a href="#">Cliente</a></li>
+          <li><a href="#">Ordem de Serviço</a></li>
+          <li><a href="#">Fornecedor</a></li>
+          <li><a href="#">Produtos</a></li>
+        </ul>
+      </li>
+      <li>
+        <div class="iocn-link">
+          <a href="#">
+            <i class='bx bx-book-alt' ></i>
+            <span class="link_name">Consulta</span>
+          </a>
+          <i class='bx bxs-chevron-down arrow' ></i>
+        </div>
+        <ul class="sub-menu">
+          <li><a class="link_name" href="#">Consulta</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Clientes</a></li>
+          <li><a href="#">Ordem de Serviço</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-pie-chart-alt-2' ></i>
+          <span class="link_name">Venda de Produtos</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">Venda de Produtos</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-line-chart' ></i>
+          <span class="link_name">Compra de Produtos</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">Compra de Produtos</a></li>
+        </ul>
+      </li>
+      <li>
+        <div class="iocn-link">
+          <a href="#">
+            <i class='bx bxs-report'></i>
+            <span class="link_name">Relatórios</span>
+          </a>
+          <i class='bx bxs-chevron-down arrow' ></i>
+        </div>
+        <ul class="sub-menu">
+          <li><a class="link_name" href="#">Relatórios</a></li>
+          <li><a href="#">Vendas</a></li>
+          <li><a href="#">Fluxo de Caixa</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-compass' ></i>
+          <span class="link_name">Explore</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">Explore</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-history'></i>
+          <span class="link_name">History</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">History</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-cog' ></i>
+          <span class="link_name">Setting</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">Setting</a></li>
+        </ul>
+      </li>
+      <li>
+    <div class="profile-details">
+      <div class="profile-content">
+        <img src="image/profile.jpg" alt="profileImg">
+      </div>
+      <div class="name-job">
+        <div class="profile_name">Usuário: </div>
+        <div class="job">Saldo Caixa: </div>
+      </div>
+      <i class='bx bx-log-out' ></i>
+    </div>
+  </li>
+</ul>
+  </div>
+  <section class="home-section">
+    <div class="home-content">
+      <i class='bx bx-menu' ></i>
+      <span class="text">Principal</span>
+    </div>
+  </section>
+
+  <script src="js/principal.js"></script>
+
+</body>
 </html>
