organizando estrutura do projeto

--- a/src/main/resources/templates/compartilhado/header.html
+++ b/src/main/resources/templates/compartilhado/header.html
@@ -29,11 +29,11 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Cadastro</a></li>
-          <li><a href="#">Funcionário</a></li>
-          <li><a href="#">Cliente</a></li>
-          <li><a href="#">Ordem de Serviço</a></li>
-          <li><a href="#">Fornecedor</a></li>
-          <li><a href="#">Produtos</a></li>
+          <li><a href="/funcionarios">Funcionário</a></li>
+          <li><a href="/cliente">Cliente</a></li>
+          <li><a href="/ordemdeServico">Ordem de Serviço</a></li>
+          <li><a href="/fornecedor">Fornecedor</a></li>
+          <li><a href="/produtos">Produtos</a></li>
         </ul>
       </li>
       <li>
@@ -124,14 +124,3 @@
   </li>
 </ul>
   </div>
-  <section class="home-section">
-    <div class="home-content">
-      <i class='bx bx-menu' ></i>
-      <span class="text">Principal</span>
-    </div>
-  </section>
-
-  <script src="js/principal.js"></script>
-
-</body>
-</html>
