--- a/src/main/resources/templates/compartilhado/header.html
+++ b/src/main/resources/templates/compartilhado/header.html
@@ -10,7 +10,7 @@
 <body>
   <div class="sidebar close">
     <div class="logo-details">
-      <i class='bx bxl-c-plus-plus'></i>
+      <img src="Logo02.png" alt="Logo">
       <span class="logo_name">Ótica New Look</span>
     </div>
     <ul class="nav-links">
@@ -86,34 +86,16 @@
       <li>
         <a href="#">
           <i class='bx bx-compass' ></i>
-          <span class="link_name">Explore</span>
+          <span class="link_name">Administrador</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">Explore</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">
-          <i class='bx bx-history'></i>
-          <span class="link_name">History</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">History</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">
-          <i class='bx bx-cog' ></i>
-          <span class="link_name">Setting</span>
-        </a>
-        <ul class="sub-menu blank">
-          <li><a class="link_name" href="#">Setting</a></li>
+          <li><a class="link_name" href="/administrador">Administrador</a></li>
         </ul>
       </li>
       <li>
     <div class="profile-details">
       <div class="profile-content">
-        <img src="image/profile.jpg" alt="profileImg">
+        
       </div>
       <div class="name-job">
         <div class="profile_name">Usuário: </div>
