--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -15,7 +15,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Seja Bem Vindo</h1>
-            <img src="LogoOtica.svg" class="left-login-image" alt="LogoOtica">
+            <img src="Logo02.png" class="left-login-image" alt="LogoOtica">
         </div>
 
         <form action="/logar" method="post">
