--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -5,10 +5,24 @@ body{
 .main-login{
     width: 100vw;
     height: 100vh;
-    background-color: rgb(223, 211, 211);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.main-login::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: #Bc8f8f url("/image/image-background.jpg") no-repeat;
+  background-size: cover;
+  z-index: -1;
+  transform: scale(-1, 1);
 }
 
 .left-login{
@@ -18,17 +32,18 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: black;
+    background: rgba(0, 0, 0, 0.85);
     border-radius: 16px 0px 0px 16px;
+    border: 1px solid #EAB317;
 }
 
 .left-login > h1{
     height: 10vh;
-    font-size: 2vw;
+    font-size: 3vw;
     color: #EAB317;
 }
 .left-login-image{
-    width: 15vw;
+    width: 20vw;
 }
 .right-login{
     width: 50vw;
@@ -45,8 +60,9 @@ body{
     align-items: center;
     flex-direction: column;
     padding: 30px 35px;
-    background: white;
-    border-radius: 0px 16px 16px 0px;
+    background: rgb(243, 238, 238);
+    border-radius: 7px 18px 18px 7px;
+    border: 1px solid #EAB317;
 }
 
 .card-login >h1 {
@@ -60,7 +76,7 @@ body{
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin: 10px 0px;
+    margin: 15px 0px;
 }
 
 .textfield > input{
@@ -77,12 +93,16 @@ body{
 }
 
 .textfield > label{
-    color: black;
+    font-family: 'Sarala', sans-serif;
+    font-size: 22px;
     margin-bottom: 10px;
+    color: black;
+    position: relative;
 }
 
 .textfield > input::placeholder{
-    color: black;
+    color: #8d8b8b; 
+    font-style: italic;
 }
 
 .btn-login{
@@ -95,6 +115,19 @@ body{
     font-weight: 1000;
     background: black;
     color: white;
+    font-size: 20px;
     
+}
+
+.btn-login:hover{
+    transition: all 0.2s linear;
+    background: #EAB317;
+}
+
+h1{
+    font-size: 48px;
+    padding: 2px 0 10px 0;
+    text-align: center;
+    padding-bottom: 10px; 
 }
 
