Cookies, controller cliente e fornecedor, model cliente e fornecedor

--- a/src/main/resources/templates/compartilhado/header.html
+++ b/src/main/resources/templates/compartilhado/header.html
@@ -30,9 +30,9 @@
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Cadastro</a></li>
           <li><a href="/funcionarios">Funcionário</a></li>
-          <li><a href="/cliente">Cliente</a></li>
+          <li><a href="/clientes">Cliente</a></li>
           <li><a href="/ordemdeServico">Ordem de Serviço</a></li>
-          <li><a href="/fornecedor">Fornecedor</a></li>
+          <li><a href="/fornecedores">Fornecedor</a></li>
           <li><a href="/produtos">Produtos</a></li>
         </ul>
       </li>
@@ -101,7 +101,8 @@
         <div class="profile_name">Usuário: </div>
         <div class="job">Saldo Caixa: </div>
       </div>
-      <i class='bx bx-log-out' ></i>
+      <a class="dropdown-item" href="/sair"><i class='bx bx-log-out' ></i></a>
+      
     </div>
   </li>
 </ul>
