--- a/src/main/resources/templates/compartilhado/footer.html
+++ b/src/main/resources/templates/compartilhado/footer.html
@@ -1,4 +1,23 @@
 
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+            </button>
+        </div>
+        <div class="modal-body">Deseja realmente sair do admin?</div>
+        <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+            <a class="btn btn-primary" href="/sair">Sair</a>
+        </div>
+    </div>
+</div>
+</div>
+
 <script src="js/principal.js"></script>
 
 </body>
