--- a/src/main/resources/templates/generico/fornecedor.html
+++ b/src/main/resources/templates/generico/fornecedor.html
@@ -1,44 +1,49 @@
 <div th:replace="compartilhado/header">...</div>
-
+<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/crud1.css">
+    <script src="js/crud1.js" defer></script>
 <section class="home-section">
-  <div class="home-content">
-    <i class='bx bx-menu'></i>
-    <span class="text">Cadastro de fornecedores</span>
-  </div>
-  <!-- DataTales Example -->
-  <div class="card shadow mb-4">
-    <div class="card-header py-3">
-      <a href="/fornecedores/novo" class="btn btn-primary" style="margin-right: 20px;">Novo</a>
-      <h6 class="m-0 font-weight-bold text-primary" style="display: inline-block;">Lista de Fornecedores</h6>
+    <div class="home-content">
+        <i class='bx bx-menu'></i>
+        <span class="text">Cadastro de fornecedores</span>
     </div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-          <thead>
-            <tr>
-              <th>NOME</th>
-              <th>TELEFONE</th>
-              <th>CNPJ</th>
-              <th></th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr th:each="fornecedor : ${fornecedores}">
-              <th th:text="${fornecedor.nome}"></th>
-              <th th:text="${fornecedor.tel}"></th>
-              <th th:text="${fornecedor.cnpj}"></th>
-              <th><a href="#" class="btn btn-warning">Alterar</th>
-              <th><a href="#"
-                  th:onclick="'if(confirm(\'Confirma?\')) {window.location.href = \'' + @{/funcionarios/{id_forne}(id_forne=${fornecedor.id_forne})} + '/excluir\'}'"
-                  class="btn btn-danger">Exluir</th>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
 
+    <body>
+    
+    <main>
+        <a href="/fornecedores/novo"><button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Fornecedor</button></a>
+        <table class="records">
+            <thead>
+                <tr>
+                  <th>NOME</th>
+                  <th>TELEFONE</th>
+                  <th>CNPJ</th>
+                  <th>AÇÃO</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="fornecedor: ${fornecedores}">
+                    <td th:text="${fornecedor.nome}"></td>
+                    <td th:text="${fornecedor.tel}"></td>
+                    <td th:text="${fornecedor.cnpj}"></td>
+                    
+                    <td>
+                        <button type="button" class="button green">editar</button>
+                        <button type="button" class="button red">excluir</button>
+                    </td>
+                </tr>
+                
+                
+            </tbody>
+        </table>
+        <div class="modal" id="modal">
+            <div class="modal-content">
+                
+            </div>
+        </div>
+    </main>
+</body>
 
 
 </section>
