--- a/src/main/resources/templates/generico/cliente.html
+++ b/src/main/resources/templates/generico/cliente.html
@@ -1,18 +1,21 @@
 <div th:replace="compartilhado/header">...</div>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/crud1.css">
-    <script src="js/crud1.js" defer></script>
 <section class="home-section">
     <div class="home-content">
-        <i class='bx bx-menu'></i>
-        <span class="text">Cadastro de clientes</span>
+      <i class='bx bx-menu' ></i>
+      <span class="text">Cadastro de Cliente</span>
     </div>
-
-    <body>
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/records.css">
+    <link rel="stylesheet" href="css/modal.css">
+    <script src="js/main.js" defer></script>
+    <title>CRUD</title>
+</head>
+<body>
     <main>
-        <a href="/clientes/novo"><button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Cliente</button></a>
+        <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Cliente</button>
         <table class="records">
             <thead>
                 <tr>
@@ -39,13 +42,27 @@
         </table>
         <div class="modal" id="modal">
             <div class="modal-content">
-                
+                <header class="modal-header">
+                    <h2>Novo Cliente</h2>
+                    <span class="modal-close" id="modalClose">&#10006;</span>
+                </header>
+                <form class="modal-form">
+                    <input type="text" class="modal-field" placeholder="Nome do Cliente">
+                    <input type="email" class="modal-field" placeholder="Endereço do Cliente">
+                    <input type="text" class="modal-field" placeholder="Telefone do Cliente">
+                    <input type="text" class="modal-field" placeholder="Celular do Cliente">
+                    <input type="text" class="modal-field" placeholder="CPF do Cliente">
+                    <input type="email" class="modal-field" placeholder="Cidade do Cliente">
+                </form>
+                <footer class="modal-footer">
+                    <button class="button green">Salvar</button>
+                    <button class="button blue">Cancelar</button>
+                </footer>
             </div>
         </div>
     </main>
 </body>
-
+</html>
 
 </section>
-
 <div th:replace="compartilhado/footer"></div>
