--- a/src/main/resources/templates/generico/cliente.html
+++ b/src/main/resources/templates/generico/cliente.html
@@ -48,10 +48,10 @@
                 </header>
                 <form class="modal-form">
                     <input type="text" class="modal-field" placeholder="Nome do Cliente">
-                    <input type="email" class="modal-field" placeholder="Endereço do Cliente">
+                    <input type="email" class="modal-field" placeholder="CPF do Cliente">
                     <input type="text" class="modal-field" placeholder="Telefone do Cliente">
                     <input type="text" class="modal-field" placeholder="Celular do Cliente">
-                    <input type="text" class="modal-field" placeholder="CPF do Cliente">
+                    <input type="text" class="modal-field" placeholder="Endereço do Cliente">
                     <input type="email" class="modal-field" placeholder="Cidade do Cliente">
                 </form>
                 <footer class="modal-footer">
